force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/GWB_Year__c.object-meta.xml
<CustomObject>
    <description>Custom Object representing Global Workbook budget for the year for specific qualifiers.</description>
    <label>GWB Year</label>
    <nameField>
        <displayFormat>GWBY-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GWB Year</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>