force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/fields/Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>Functional_Area__c</fullName>
    <formula>TEXT(Plant_Sector__r.Functional_Area__c)</formula>
    <label>Functional Area</label>
    <type>Text</type>
</CustomField>