force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/fields/M_Schedule_Version__c.field-meta.xml
<CustomField>
    <fullName>M_Schedule_Version__c</fullName>
    <label>M-Schedule Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Point_Value</valueSetName>
    </valueSet>
</CustomField>