force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <description>Lookup field to related Plant Object</description>
    <label>Plant</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>GWB Years</relationshipLabel>
    <relationshipName>GWB_Years</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>