force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/fields/Plant_Preview__c.field-meta.xml
<CustomField>
    <fullName>Plant_Preview__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this budget is available for plant-level preview users.</description>
    <label>Plant Preview</label>
    <type>Checkbox</type>
</CustomField>