force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/fields/Plant_Program__c.field-meta.xml
<CustomField>
    <fullName>Plant_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Program</label>
    <referenceTo>Plant_Program__c</referenceTo>
    <relationshipLabel>GWB Year</relationshipLabel>
    <relationshipName>GWB_Year</relationshipName>
    <type>Lookup</type>
</CustomField>