force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/fields/Plant_Sector__c.field-meta.xml
<CustomField>
    <fullName>Plant_Sector__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Plant Sector</label>
    <referenceTo>Plant_Sector__c</referenceTo>
    <relationshipLabel>GWB Years</relationshipLabel>
    <relationshipName>GWB_Years</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>