force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/fields/Previous_Year_GWB__c.field-meta.xml
<CustomField>
    <fullName>Previous_Year_GWB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Previous Global Workbook Year</description>
    <label>Previous Year GWB</label>
    <referenceTo>GWB_Year__c</referenceTo>
    <relationshipLabel>GWB Years</relationshipLabel>
    <relationshipName>GWB_Years</relationshipName>
    <type>Lookup</type>
</CustomField>