force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/fields/Published_By__c.field-meta.xml
<CustomField>
    <fullName>Published_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who published the Global Workbook Year</description>
    <label>Published By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GWB_Years</relationshipName>
    <type>Lookup</type>
</CustomField>