force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/fields/Revision_Reason__c.field-meta.xml
<CustomField>
    <fullName>Revision_Reason__c</fullName>
    <description>Reason for Revision</description>
    <label>Revision Reason</label>
    <type>TextArea</type>
</CustomField>