force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the Global Workbook Year</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Plant Review</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Plant Review Complete</fullName>
            </value>
            <value>
                <fullName>Finance Review</fullName>
            </value>
            <value>
                <fullName>Finance Approved</fullName>
            </value>
            <value>
                <fullName>Locked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>