force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/fields/Target_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Name__c</fullName>
    <description>Hyperlink to the GWB Year record using Year and M-Schedule Version</description>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id, TRIM(BLANKVALUE(Year__c, &quot;&quot;) &amp; &quot; &quot; &amp; TEXT(M_Schedule_Version__c)), &quot;_self&quot;)</formula>
    <label>Target Name</label>
    <type>Text</type>
</CustomField>