force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/fields/Target_Title__c.field-meta.xml
<CustomField>
    <fullName>Target_Title__c</fullName>
    <description>PR1064302-565 - Field will be used on the lightning page header for Target records</description>
    <formula>IF(
    TEXT(Sector__c) = &quot;GPS&quot;,
    BLANKVALUE(Plant__r.Name, &quot;&quot;) &amp;
    IF(
        NOT(ISBLANK(Plant_Program__r.Product_Type__c)),
        &quot; - &quot; &amp; Plant_Program__r.Product_Type__c,
        &quot;&quot;
    ) &amp;
    IF(
        NOT(ISBLANK(Plant_Program__r.Name)),
        &quot; - &quot; &amp; Plant_Program__r.Name,
        &quot;&quot;
    ) &amp;
    IF(
        NOT(ISBLANK(Functional_Area__c)),
        &quot; - &quot; &amp; Functional_Area__c,
        IF(
            NOT(ISBLANK(Plant_Sector__r.Part_Type__c)),
            &quot; - &quot; &amp; Plant_Sector__r.Part_Type__c,
            &quot;&quot;
        )
    ) &amp;
    IF(
        NOT(ISBLANK(Version__c)),
        &quot; &quot; &amp; Version__c,
        &quot;&quot;
    ),
    BLANKVALUE(Plant__r.Name, &quot;&quot;) &amp;
    IF(
        NOT(ISBLANK(Version__c)),
        &quot; - &quot; &amp; Version__c,
        &quot;&quot;
    )
)</formula>
    <label>Target Title</label>
    <type>Text</type>
</CustomField>