force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <externalId>true</externalId>
    <label>Unique Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>