force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Year for the Global Workbook</description>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>