force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/recordTypes/Actuals.recordType-meta.xml
<RecordType>
    <fullName>Actuals</fullName>
    <active>true</active>
    <label>Actuals</label>
</RecordType>