force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/recordTypes/BM.recordType-meta.xml
<RecordType>
    <fullName>BM</fullName>
    <active>true</active>
    <label>BM</label>
</RecordType>