force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/recordTypes/Budget.recordType-meta.xml
<RecordType>
    <fullName>Budget</fullName>
    <active>true</active>
    <label>Budget</label>
</RecordType>