force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/recordTypes/IBM.recordType-meta.xml
<RecordType>
    <fullName>IBM</fullName>
    <active>true</active>
    <label>IBM</label>
</RecordType>