force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/recordTypes/Target.recordType-meta.xml
<RecordType>
    <fullName>Target</fullName>
    <active>true</active>
    <label>Target</label>
</RecordType>