force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/validationRules/Restrict_Edit_For_Plant_Admin.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Edit_For_Plant_Admin</fullName>
    <active>false</active>
    <description>PR1064302-420: Prevents users with the Plant_Admin custom permission from editing a GWB Year (Target) record when the prior status was Plant Review Complete, Published, or Locked.</description>
    <errorConditionFormula>AND(
    NOT($Setup.GWB_Switch__c.Bypass_VRs__c),
    $Permission.Plant_Admin,
    OR(
        ISPICKVAL(PRIORVALUE(Status__c), &apos;Plant Review Complete&apos;),
        ISPICKVAL(PRIORVALUE(Status__c), &apos;Published&apos;),
        ISPICKVAL(PRIORVALUE(Status__c), &apos;Locked&apos;)
    )
)</errorConditionFormula>
    <errorMessage>You do not have permission to edit this Target record. Records with a status of Plant Review Complete, Published or Locked cannot be modified by a Plant Admin.</errorMessage>
</ValidationRule>