force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Target_Name__c</columns>
    <columns>NAME</columns>
    <columns>Plant_Sector__c</columns>
    <columns>Sector__c</columns>
    <columns>Status__c</columns>
    <columns>Plant__c</columns>
    <columns>Plant_Preview__c</columns>
    <columns>Previous_Year_GWB__c</columns>
    <columns>M_Schedule_Version__c</columns>
    <columns>Version__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>