force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Year__c/listViews/Target_Drafts.listView-meta.xml
<ListView>
    <fullName>Target_Drafts</fullName>
    <columns>NAME</columns>
    <columns>Plant__c</columns>
    <columns>Sector__c</columns>
    <columns>Status__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ready to Publish</value>
    </filters>
    <label>Ready to Publish Targets</label>
</ListView>